--- a/Dashboard/bokeh_config.json
+++ b/Dashboard/bokeh_config.json
@@ -19,7 +19,16 @@
 			]
 		},
 		"layers": [
-			"LYON1ERBATI2015"
+			"LYON1ERBATI2015",
+			"LYON2EMEBATI2015",
+			"LYON3EMEBATI2015",
+			"LYON4EMEBATI2015",
+			"LYON5EMEBATI2015",
+			"LYON6EMEBATI2015",
+			"LYON7BATI2015",
+			"LYON8EMEBATI2015",
+			"LYON9EMEBATI2015",
+			"VILLEURBANNEBATI2015"
 		]
 	},
 	"figures_settings": {
