--- a/FormatAndAnalyseRoofs/DockerContext/Dockerfile
+++ b/FormatAndAnalyseRoofs/DockerContext/Dockerfile
@@ -20,6 +20,9 @@ RUN git clone https://$git_token@github.com/VCityTeam/UD-geodecision.git
 # Create conda virtual environment and install geodecision
 RUN conda env create -f ./UD-geodecision/geodecision/env.yml
 
+# Remove .git directory
+RUN rm -r ./UD-geodecision/.git
+
 # The code to run when container is started:
 COPY get_analysed_roofs.py .
 COPY entrypoint.py .
