--- a/FormatAndAnalyseRoofs/DockerContext/Dockerfile
+++ b/FormatAndAnalyseRoofs/DockerContext/Dockerfile
@@ -17,8 +17,23 @@ RUN wget https://box.liris.cnrs.fr/s/S6pxYb4kEmzCFgt/download && unzip download 
 ARG git_token
 RUN git clone https://$git_token@github.com/VCityTeam/UD-geodecision.git
 
-# Create conda virtual environment and install geodecision
-RUN conda env create -f ./UD-geodecision/geodecision/env.yml
+# Create a directory channel
+RUN mkdir -p /tmp/my-conda-channel/linux-64
+
+# Copy the build file to the channel & architecture directory
+RUN cp UD-geodecision/geodecision/conda.build/linux-64/geodecision-0.1-0.tar.bz2 /tmp/my-conda-channel/linux-64/
+RUN conda install conda-build 
+
+# Index the channel
+RUN conda index /tmp/my-conda-channel/linux-64/
+
+# Create conda virtual environment
+RUN conda create --name geodecision
+SHELL ["conda", "run", "-n", "geodecision", "/bin/bash", "-c"]
+
+# Conda install geodecision package
+RUN conda config --append channels conda-forge
+RUN conda install -c file://tmp/my-conda-channel/ geodecision=0.1
 
 # Remove .git directory
 RUN rm -r ./UD-geodecision/.git
