--- a/Dashboard/bokeh_config.json
+++ b/Dashboard/bokeh_config.json
@@ -1,6 +1,6 @@
 {
 	"inputs": {
-		"roofs": "dashboard/data/Dashboard/Roofs.gpkg",
+		"roofs": "dashboard/data/Dashboard/Roofs_test.gpkg",
 		"intersections": "dashboard/data/Dashboard/results.gpkg",
 		"background": "dashboard/background.geojson",
 		"unique_id": "ids",
@@ -37,16 +37,8 @@
 			]
 		},
 		"layers": [
-			"LYON1ERBATI2015",
-			"LYON2EMEBATI2015",
-			"LYON3EMEBATI2015",
-			"LYON4EMEBATI2015",
-			"LYON5EMEBATI2015",
-			"LYON6EMEBATI2015",
-			"LYON7BATI2015",
-			"LYON8EMEBATI2015",
-			"LYON9EMEBATI2015",
-			"VILLEURBANNEBATI2015"
+			"LYON_4",
+			"LYON_5"
 		]
 	},
 	"figures_settings": {
