Intersection integration. Add bokeh_snippets from UD-geodecsision and delete it in UD-geodecision. WIP

--- a/Dashboard/bokeh_config.json
+++ b/Dashboard/bokeh_config.json
@@ -1,6 +1,6 @@
 {
 	"inputs": {
-		"roofs": "dashboard/data/Dashboard/Roofs_test.gpkg",
+		"roofs": "dashboard/data/Dashboard/Roofs.gpkg",
 		"intersections": "dashboard/data/Dashboard/results.gpkg",
 		"background": "dashboard/background.geojson",
 		"unique_id": "ids",
@@ -37,8 +37,16 @@
 			]
 		},
 		"layers": [
-			"LYON_4",
-			"LYON_5"
+			"LYON1ERBATI2015",
+			"LYON2EMEBATI2015",
+			"LYON3EMEBATI2015",
+			"LYON4EMEBATI2015",
+			"LYON5EMEBATI2015",
+			"LYON6EMEBATI2015",
+			"LYON7BATI2015",
+			"LYON8EMEBATI2015",
+			"LYON9EMEBATI2015",
+			"VILLEURBANNEBATI2015"
 		]
 	},
 	"figures_settings": {
